# NTTP-Proxy

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
app-server/: Cargo.toml  Dockerfile
app-server/src/: handlers.rs  main.rs  state.rs  store.rs
app-server/static/: app.js  index.html  styles.css
client/: Cargo.toml  Dockerfile
client/src/: main.rs
docs/: architecture.md  todo.md
gui/: Cargo.toml  Dockerfile
gui/src/: app_client.rs  main.rs
gui/static/: app.js  index.html  styles.css
src/: app_client.rs  config.rs  main.rs  pool.rs  session.rs  tls.rs  user_pool.rs
