[package]
name = "nzbservice-app-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum                 = { version = "0.8", features = ["macros"] }
tower-http           = { version = "0.6", features = ["fs", "cors", "trace"] }
tokio                = { version = "1", features = ["full"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
chrono               = { version = "0.4", features = ["serde"] }
parking_lot          = "0.12"
rusqlite             = { version = "0.32", features = ["bundled"] }
sha2                 = "0.10"
hex                  = "0.4"
rand                 = "0.8"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
tracing-appender     = "0.2"
anyhow               = "1"

[dev-dependencies]
tempfile             = "3"
tower                = "0.5"
