[workspace]

[package]
name = "nzb-fail-test"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
nzb-postproc = { path = "../../../libs/nzb-postproc" }
nzb-core = { path = "../../../libs/nzb-core" }

[patch.'sparse+https://repo.indexarr.net/api/packages/indexarr/cargo/']
nzb-postproc = { path = "../../../libs/nzb-postproc" }
nzb-core     = { path = "../../../libs/nzb-core" }
nzb-web      = { path = "../../../libs/nzb-web" }
nzb-nntp     = { path = "../../../libs/nzb-nntp" }
nzb-decode   = { path = "../../../libs/nzb-decode" }
yenc-simd    = { path = "../../../libs/rust-yenc-simd" }

[dependencies]
# Use the same crate versions as Arz
nzb-web = { version = "0.1.3", registry = "forgejo" }
nzb-core = { version = "0.2.2", registry = "forgejo" }
nzb-nntp = { version = "0.2.6", registry = "forgejo" }
nzb-postproc = { version = "0.2.2", registry = "forgejo" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
