[workspace]

[package]
name = "nzbservice-gui"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
nzb-postproc = { path = "../../../libs/nzb-postproc" }
nzb-core     = { path = "../../../libs/nzb-core" }

[patch.'sparse+https://repo.indexarr.net/api/packages/indexarr/cargo/']
nzb-postproc = { path = "../../../libs/nzb-postproc" }
nzb-core     = { path = "../../../libs/nzb-core" }
nzb-web      = { path = "../../../libs/nzb-web" }
nzb-nntp     = { path = "../../../libs/nzb-nntp" }
nzb-decode   = { path = "../../../libs/nzb-decode" }
yenc-simd    = { path = "../../../libs/rust-yenc-simd" }

[dependencies]
# Private crates (Forgejo registry; patched to local paths — see docs/todo.md)
nzb-web      = { version = "0.1.3", registry = "forgejo" }
nzb-core     = { version = "0.2.2", registry = "forgejo" }
nzb-nntp     = { version = "0.2.6", registry = "forgejo" }
nzb-postproc = { version = "0.2.2", registry = "forgejo" }

# Web server
axum          = { version = "0.8", features = ["multipart"] }
tower-http    = { version = "0.6", features = ["fs", "cors", "trace"] }
tokio         = { version = "1", features = ["full"] }

# HTTP client (rustls — no OpenSSL dep)
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serde
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
parking_lot   = "0.12"
chrono        = { version = "0.4", features = ["serde"] }

# Logging
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
tracing-appender     = "0.2"

# Util
anyhow        = "1"
